--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ body {
 
 header {
   background: var(--dark);
-  height: 800px;
 }
 
 .container {
@@ -55,3 +54,27 @@ header nav .logo {
 }
 
 
+.hero img {
+  width: 400px;
+}
+
+.hero .right {
+  color: var(--pure);
+}
+
+.hero .right h6 {
+  font-size: 1.6rem;
+  color: var(--primary);
+  margin-bottom: 0.5rem;
+}
+
+.hero .right h1 {
+  font-size: 4rem;
+  font-weight: 100;
+  line-height: 1.2;
+  margin-bottom: 2rem;
+}
+
+h1 span {
+  color: var(--primary);
+}
