--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
   --pure: #ffffff;
   --grey: #898989;
   --light: #F2F2F2;
+  --secondary: #070606;
 }
 
 * {
@@ -123,3 +124,71 @@ section {
    line-height: 1.8;
    margin-bottom: 2rem;
  }
+
+
+ /* services  */
+
+ .section-heading {
+   color: var(--secondary);
+   text-align: center;
+   line-height: 0.5;
+      margin-bottom: 2rem;
+
+ }
+
+
+ .section-heading + p {
+
+   color: var(--grey);
+   margin-bottom: 8rem;
+   text-align: center;
+ }
+
+
+ section.services {
+   background: var(--light);
+ }
+
+ section.services .card-wrapper {
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   grid-column-gap: 2rem;
+   grid-row-gap: 6rem;
+ }
+
+section.services .card-wrapper .card {
+  background: var(--pure);
+  padding: 3rem 2rem;
+  position: relative;
+  padding-top: 5rem;
+  text-align: center;
+  transition: all .3s ease;
+}
+
+
+section.services .card-wrapper .card img {
+  position: absolute;
+  top: -3.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+section.services .card-wrapper .card h2{
+  font-weight: 400;
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+section.services .card-wrapper .card p { 
+color:var(--grey);
+line-height: 1.6;
+}
+
+
+section.services .card-wrapper .card:hover { 
+background: var(--dark);
+}
+
+section.services .card-wrapper .card:hover h2, section.services .card-wrapper .card:hover p { 
+color:var(--pure);
+}
