--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,8 @@ h1 span {
 }
 
 
-/* About */
+/* About 
+******************/
 
 section {
   padding: 6rem 0;
@@ -126,7 +127,8 @@ section {
  }
 
 
- /* services  */
+ /* services
+ *********************/
 
  .section-heading {
    color: var(--secondary);
@@ -191,4 +193,62 @@ background: var(--dark);
 
 section.services .card-wrapper .card:hover h2, section.services .card-wrapper .card:hover p { 
 color:var(--pure);
+}
+
+/* slider
+******************/
+
+section.reviews .slider .slide img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 2rem;
+}
+
+section.reviews .slider .slide {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding: 0 10rem;
+}
+
+section.reviews .slider .slide p {
+  color: var(--grey);
+  margin-bottom: 1rem;
+}
+
+section.reviews .slider .slide span {
+  font-size: 0.8rem;
+}
+
+
+section.reviews .slider-dots .dots {
+  list-style-type: none;
+  display: flex!important;
+  justify-content: center;
+}
+
+
+section.reviews .slider-dots {
+  margin-top: 3rem;
+}
+
+
+section.reviews .slider-dots button {
+  font-size: 0;
+  width: 8px;
+  height: 7px;
+  margin-right: 0.3rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: var(--grey);
+  border-radius: 50px;
+  padding: 0.4rem;
+}
+
+section.reviews .dots li.slick-active button {
+  background: var(--primary);
 }
