feat: displaying grid style images for our work

--- a/css/style.css
+++ b/css/style.css
@@ -252,3 +252,21 @@ section.reviews .slider-dots button {
 section.reviews .dots li.slick-active button {
   background: var(--primary);
 }
+
+
+section.work {
+  background: var(--light);
+}
+
+section.work .card-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-gap: 2rem;
+}
+
+
+.card img {
+  width: 22rem;
+  height: 14.5rem;
+}
+
