--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
   --grey: #898989;
   --light: #F2F2F2;
   --secondary: #070606;
+  --dark-grey: #2d3538;
 }
 
 * {
@@ -266,7 +267,75 @@ section.work .card-wrapper {
 
 
 .card img {
-  width: 22rem;
-  height: 14.5rem;
+width: 100%
 }
 
+
+/** blog
+ *************************/
+
+section.blog {
+  background: var(--dark-grey);
+  clip-path: polygon(0 0,  100% 0, 100% 100%, 67% 90%, 0 100%);
+  padding-bottom: 15rem
+}
+
+section.blog .section-heading {
+  color: var(--pure);
+}
+
+section.blog .card-wrapper {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 3rem;
+  padding: 0 6rem;
+}
+
+.card {
+  background: var(--pure);
+}
+
+.card .card-content {
+  padding: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.card .img-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card .card-content {
+  padding: 1rem;
+}
+
+.card .card-content h1 {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.card .card-content h1:hover {
+  color: var(--primary);
+}
+
+.card .card-content a {
+  color: var(--secondary);
+  text-decoration: none;
+}
+
+.card .card-content a span {
+  color: var(--grey);
+  font-size: 0.8rem;
+}
+
+ .card .card-content p {
+  color: var(--grey);
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.card .card-content a.read-more {
+  font-size: 0.8rem;
+}
