--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
   --dark: #161616;
   --pure: #ffffff;
   --grey: #898989;
+ /* --grey: #2d3538; */
+
   --light: #F2F2F2;
   --secondary: #070606;
   --dark-grey: #2d3538;
@@ -90,7 +92,7 @@ header nav .logo {
   margin-bottom: 2rem;
 }
 
-h1 span {
+h3 span {
   color: var(--primary);
 }
 
@@ -122,7 +124,7 @@ section {
 }
 
  
-.about h1 span {
+.about h3 span {
   color: var(--primary);
   font-size: 1.5rem;
   margin-bottom: 1rem;
@@ -346,6 +348,10 @@ section.blog .card-wrapper {
   font-size: 0.8rem;
 }
 
+
+/** contact form 
+**************************************/
+
 .contact .card-wrapper {
   display:  grid;
   grid-template-columns: repeat(3, 1fr);
@@ -405,6 +411,14 @@ padding: 0.5rem;
 .contact .btn-wrapper {
   margin-top: 2rem;
 }
+
+.blog-text {
+  color:  var(--pure);;
+}
+
+
+/** footer
+**************************************/
 
 footer {
   background: var(--dark-grey);
@@ -517,7 +531,7 @@ footer .footer-socials a {
   .book-now-container {
     padding-bottom: 3rem;
   }
-  .right h1 {
+  .right h3 {
     font-size: 1.5rem;
   }
   .hero {
